@@ -133,6 +133,11 @@ SUBDIRS += ../modules/loaders/gif
 EVAS_STATIC_MODULE += ../modules/loaders/gif/libevas_loader_gif.la
 EVAS_STATIC_LIBADD += @evas_image_loader_gif_libs@
 endif
+if EVAS_STATIC_BUILD_ICO
+SUBDIRS += ../modules/loaders/ico
+EVAS_STATIC_MODULE += ../modules/loaders/ico/libevas_loader_ico.la
+EVAS_STATIC_LIBADD += @evas_image_loader_ico_libs@
+endif
 if EVAS_STATIC_BUILD_JPEG
 SUBDIRS += ../modules/loaders/jpeg
 EVAS_STATIC_MODULE += ../modules/loaders/jpeg/libevas_loader_jpeg.la
